SIP-5358: Fix privilege editor element widths to not overlap scrollbar

--- a/saw-web/src/app/modules/admin/privilege/edit-dialog/privilege-edit-dialog.component.scss
+++ b/saw-web/src/app/modules/admin/privilege/edit-dialog/privilege-edit-dialog.component.scss
@@ -1,4 +1,4 @@
-@import "src/themes/base/colors";
+@import 'src/themes/base/colors';
 
 :host {
   display: block;
@@ -16,5 +16,10 @@
 
   .form-field {
     margin-bottom: 5px;
+  }
+
+  form {
+    width: 97%;
+    margin: 0 auto;
   }
 }
